# tjghs

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
ghs/: asgi.py  settings.py  urls.py  wsgi.py
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_user_isadmin_submission.py  0003_alter_submission_user.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_alter_submission_user.py  0007_alter_submission_user.py  0008_submission_authorized.py
static/: officerstyles.css  styles.css
staticfiles/: aboutstyles.css  aboutstyles2.css  eventsstyles.css  eventsstyles2.css  homestyles.css  officerstyles.css  styles.css
templates/: about.html  events.html  home.html  officers.html  profile.html  wotd.html
